# image-processing

./: CMakeLists.txt  README.md  bmp_img.c  bmp_img.h  conversions.c  conversions.h  main.c
